Fix header z-index for search

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -14,7 +14,7 @@ header
   height: 88px
   position: relative
   width: 100%
-  z-index: 99999
+  z-index: 999
 
   &.home
     position: fixed
