--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -100,10 +100,8 @@ section.content
     +font-size(14)
     +pie-clearfix
     display: block
-    height: 80px
-    line-height: 80px
-    max-width: 1280px
-    margin-bottom: $marginSize
+    line-height: 44px
+    margin-bottom: $marginSize*2
     text-align: center
     width: 100%
     font-family: #{"{{ theme.header_font | font_family }}"}
